# mqtt_v

./: Cargo.toml  LICENSE  README.md
.github/workflows/: Release.yml
backend/: Cargo.toml
backend/src/: lib.rs  message.rs  mqtt_client.rs
mqtt_v/: Cargo.toml
mqtt_v/src/: main.rs  util.rs
mqtt_v/src/ui/: app_theme.rs  chat_tab.rs  client.rs  mod.rs  tree_tab.rs
mqtt_v/src/ui/client/: chat_tab.rs  client.rs  mod.rs  publish_tab.rs  tree_tab.rs
mqtt_v/src/ui/widgets/: mod.rs  packet.rs  status_led.rs
mqtt_v/src/ui/widgets/docking/: mod.rs  tab.rs  tree.rs
