[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
eframe = "0.19.0"
once_cell = "1.14.0"
rumqttc = "0.16.0"
tokio = { version = "*", features = ["full"] }
tracing="*"
chrono="*"
