[package]
name = "backend"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
once_cell = "1.14.0"
rumqttc = "0.20.0"
tokio = { version = "*", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
tracing="*"
chrono="*"
