[package]
name = "mqtt_v"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.19.0", features = ["persistence"]}
backend = { path = "../backend" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.14.0"
tokio = { version = "*", features = ["full"] }
chrono="*"